--- a/rest_api/templates/usuarios/modificar-turma.html
+++ b/rest_api/templates/usuarios/modificar-turma.html
@@ -148,7 +148,6 @@
 
         .center-link label:hover {
             background-color: #0056b3;       /* Cor de fundo azul escuro ao passar o mouse */
-            cursor: pointer;                 /* Altera o cursor para pointer (indicando que é clicável) */
         }
 
         .center-button-container {
@@ -204,7 +203,7 @@
             <button id="next-page" type="button">Próximo</button>
         </div>
         <div class="center-link">
-            <li><a href="http://127.0.0.1:8000/usuarios/home.html"><i class="fas fa-sign-out-alt"></i> Voltar para a tela inicial</a></li>
+            <li><a href="http://127.0.0.1:8000/usuarios/turmas.html"><i class="fas fa-sign-out-alt"></i> Voltar para as turmas</a></li>
         </div>
     </form>
     {% if messages %}
