--- a/rest_api/templates/usuarios/home.html
+++ b/rest_api/templates/usuarios/home.html
@@ -105,6 +105,7 @@
             height: 100vh;
             font-family: Arial, sans-serif;
         }
+        
         .welcome-message {
             position: fixed;
             top: 50%;
@@ -174,7 +175,7 @@
             <li><a href="http://127.0.0.1:8000/usuarios/turmas.html"><i class="fas fa-users"></i> Turmas</a></li>
             <li>
                 <a href="http://127.0.0.1:8000/usuarios/logout.html" onclick="return confirmLogout(event)">
-                    <i class="fas fa-sign-out-alt"></i> Voltar para a tela de login
+                    <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
             </li>
         </ul>
