--- a/rest_api/templates/usuarios/turmas.html
+++ b/rest_api/templates/usuarios/turmas.html
@@ -18,6 +18,18 @@
             color: #333;
         }
 
+        .content {
+            margin-left: 0;
+            flex: 1;
+            background: url('/static/css/images/image_scholar.webp') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            transition: margin-left 0.3s ease-in-out;
+        }
+
         h1 {
             color: #444;
             text-align: center;
@@ -218,6 +230,35 @@
             font-weight: bold;
         }
 
+        .confirmation-message {
+            position: fixed;
+            top: 285px;
+            left: 50%;
+            width: 25%;
+            transform: translateX(-50%);
+            background-color: rgba(0, 128, 0, 0.7);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 10px;
+            font-size: 18px;
+            font-weight: bold;
+            text-align: center;
+            z-index: 1000;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+            animation: fadeOut 3s forwards;
+        }
+        @keyframes fadeOut {
+            0% {
+                opacity: 1;
+            }
+            80% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+
     </style>
 </head>
 <body>
@@ -275,5 +316,12 @@
             </div>
         </div>
     </form>
+    <div class="content">
+        {% if messages %}
+            {% for message in messages %}
+                <p class="confirmation-message">{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    </div>    
 </body>
 </html>
