Mini-projeto completo!

--- a/rest_api/templates/usuarios/notas-alunos.html
+++ b/rest_api/templates/usuarios/notas-alunos.html
@@ -330,25 +330,25 @@
                     <td>
                         {% with nota=notas_dict|get_item:aluno_turma.aluno.id %}
                             <input type="number" step="0.01" name="nota1_{{ aluno_turma.aluno.id }}" 
-                                value="{{ nota.nota1|default:0.0 }}">
+                                value="{{ nota.nota1|default_if_none:'' }}">
                         {% endwith %}
                     </td>
                     <td>
                         {% with nota=notas_dict|get_item:aluno_turma.aluno.id %}
                             <input type="number" step="0.01" name="nota2_{{ aluno_turma.aluno.id }}" 
-                                value="{{ nota.nota2|default:0.0 }}">
+                                value="{{ nota.nota2|default_if_none:'' }}">
                         {% endwith %}
                     </td>
                     <td>
                         {% with nota=notas_dict|get_item:aluno_turma.aluno.id %}
                             <input type="number" step="0.01" name="nota3_{{ aluno_turma.aluno.id }}" 
-                                value="{{ nota.nota3|default:0.0 }}">
+                                value="{{ nota.nota3|default_if_none:'' }}">
                         {% endwith %}
                     </td>
                     <td>
                         {% with nota=notas_dict|get_item:aluno_turma.aluno.id %}
                             <input type="number" step="0.01" name="final_{{ aluno_turma.aluno.id }}" 
-                                value="{{ nota.final|default:0.0 }}">
+                                value="{{ nota.final|default_if_none:'' }}">
                         {% endwith %}
                     </td>
                     <td>
